# raggre46

./: .gitignore  Cargo.toml  README.md  release.sh
src/: raggre.rs  raggre4.rs  raggre6.rs  runtest.sh  ruran4.rs  ruran6.rs  test4-ok.txt  test4.txt  test4invalid-ok.txt  test4invalid.txt  test6-0.txt  test6-ok.txt  test6.txt  test6invalid-ok.txt  test6invalid.txt
