[package]
name = "raggre"
version = "0.5.1"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1"
libc = "0.2"
rand = "0.10"
unicode-segmentation = "1"

[[bin]]
name = "raggre"
path = "src/raggre.rs"

[[bin]]
name = "ruran4"
path = "src/ruran4.rs"

[[bin]]
name = "ruran6"
path = "src/ruran6.rs"

[profile.release]
opt-level = 3
debug = true
lto = true # Enable Link Time Optimization
codegen-units = 1
panic = "abort"
